Apply scroll offset and content box offset before recursing in mapAncestorToLocal

The way mapAncestorToLocal works is to compute a localToAncestor transform, then
invert it at the end. Thus the incremental pieces of the transforms must be applied
bottom-up.

Also clean up a few places where scrollOffset() is simpler to use than scrollPosition.

BUG=607565

Review-Url: https://codereview.chromium.org/1994203003
Cr-Commit-Position: refs/heads/master@{#394922}

Former-commit-id: 2ea2924dc159391166a1b42008f576a501e42ea3